Setup initial layout, index page, basic css, and first linked page Part1.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <html lang="en">
 <head>
-	<title>Encouraging Programmer</title>
+	<title>Database Management Learning Journey</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<!-- <link rel="stylesheet" href="css/style.css" /> -->
+	<link rel="stylesheet" href="css/style.css" />
 </head>
-  
+
 <body>
-  <h1> Intro to Database Management </h1>
+	<header><h1><a href="index.html">Intro to Database Management</a></h1></header>
+	
+	<blockquote>
+		<dl>
+			<dt div="term">What is a Database?</dt>
+			<dd div="definition">A database is a computer system that organizes 
+			and stores data so that it can be useful at a later point in time.</dd>
+		</dl>
+		<p>
+			<cite>Adam Wibert - <a href="https://www.linkedin.com/learning/database-foundations-intro-to-databases/">
+			LinkedIn Learning Course - Database Founations: Intro to Databases</a></cite>
+		</p>
+	</blockquote>
+
+	<ul>
+		<h2 div="Part">
+			<a href="pages/Part1.html">Part 1 Context of Database Management</a>
+		</h2>
+	</ul>
+
+	<footer></footer>
 </body>
+
