Adding citations and content.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,27 @@
 	<blockquote>
 		<dl>
 			<dt div="term">What is a Database?</dt>
-			<dd div="definition">A database is a computer system that organizes 
-			and stores data so that it can be useful at a later point in time.</dd>
+			<dd div="definition">
+				A database is a computer system that organizes 
+				and stores data so that it can be useful at a later point in time.
+				<cite>(Wilbert)</cite>
+			</dd>
 		</dl>
 		<p>
-			<cite>Adam Wibert - <a href="https://www.linkedin.com/learning/database-foundations-intro-to-databases/">
-			LinkedIn Learning Course - Database Founations: Intro to Databases</a></cite>
+			<a href="https://www.linkedin.com/learning/database-foundations-intro-to-databases/">
+			LinkedIn Learning Course - Database Founations: Intro to Databases</a>
 		</p>
 	</blockquote>
+
+	<p>
+		The material from this website draws from various sources, but primarily follows
+		the structure <a href="https://www.athabascau.ca/syllabi/comp/comp378.html">COMP 378 - 
+		Introduction to Database Management</a> from Athabasca University, which follows the textbook 
+		"Modern Database Management, 10th Edition" by Jefery A. Hoffer, V. Ramesh, and Heikki Topi. 
+		A full list of citations is available <a href="pages/Citations.html">here.</a>
+	</p>
+
+	
 
 	<ul>
 		<h2 div="Part">
@@ -28,6 +41,6 @@
 		</h2>
 	</ul>
 
-	<footer></footer>
+	<footer><a href="pages/Citations.html">Citations</a></footer>
 </body>
 
