Updating content on Part1.html

--- a/pages/Part1.html
+++ b/pages/Part1.html
@@ -90,8 +90,6 @@
 				A software system that is used to create, maintain, and provide controlled access to 
 				user databases.
 			</dd>
-			<dt div="term"></dt>
-			<dd div="definition"></dd>
 		</dl>
 
 		<p>
@@ -124,10 +122,96 @@
 			<dd div="definition">
 				A rule that cannot be violated by database users.
 			</dd>
+		</dl>
+
+		<p>
+			<h4>Costs and Risks of the Database Approach</h4>
+			<ul>
+				<li>New, specialized personnel</li>
+				<li>Installation and management costs and complexity</li>
+				<li>Conversion costs</li>
+				<li>Need for explicit backup and recovery</li>
+				<li>Organizational conflict</li>
+			</ul>
+		</p>
+
+		<p>
+			<h4>Components of the Database Environment</h4>
+			<ol>
+				<li>Computer-aided software engineering (CASE) tools</li>
+				<li>Repository</li>
+				<li>DBMS</li>
+				<li>Database</li>
+				<li>Application programs</li>
+				<li>User interface</li>
+				<li>Data and database administrators</li>
+				<li>System developers</li>
+				<li>End Users</li>
+			</ol>
+		</p>
+
+		<dl>
+			<dt div="term">Computer-aided software engineering (CASE) tools</dt>
+			<dd div="definition">
+				Software tools that provide automated support for some portion of the 
+				systems development process.
+			</dd>
+			<dt div="term">Repository</dt>
+			<dd div="definition">
+				A centralized knowledge base of all data definitions, data relationships,
+				screen and report formats, and other system conponents.
+			</dd>
+			<dt div="term">Enterprise resource planning (ERP)</dt>
+			<dd div="definition">
+				A business management system that integrates all functions of the enterprise,
+				such as manufacturing, sales, finance, marketing, inventory, accounting, and
+				human resources. ERP systems are software applications that provide the data
+				necessary for the enterprise to examine and manage its activities.
+			</dd>
+			<dt div="term">Data warehouse</dt>
+			<dd div="definition">
+				An integrated decision support database whose content is derived from the various
+				operational databases.
+			</dd>
 			<dt div="term"></dt>
 			<dd div="definition"></dd>
 		</dl>
 	</p>
+
+	<table>
+		<tr>
+			<th>Types of Database / Application</th>
+			<th>Typical Number of Users</th>
+			<th>Typical Size of Database</th>
+		</tr>
+		<tr>
+			<td>Personal</td>
+			<td>1</td>
+			<td>Megabytes</td>
+		</tr>
+		<tr>
+			<td>Two-tier</td>
+			<td>5-100</td>
+			<td>Megabytes-gigabytes</td>
+		</tr>
+		<tr>
+			<td>Three-tier</td>
+			<td>100-1000</td>
+			<td>Gigabytes</td>
+		</tr>
+		<tr>
+			<td>Enterprise resource planning</td>
+			<td>&gt;100</td>
+			<td>Gigabytes-terabytes</td>
+		</tr>
+		<tr>
+			<td>Data warehousing</td>
+			<td>&gt;100</td>
+			<td>Terabytes-petabytes</td>
+		</tr>
+	</table>
+
+	
 
 	<footer><a href="../pages/Citations.html">Citations</a></footer>
 
