Part1.html content update and minor formatting to style.css

--- a/pages/Part1.html
+++ b/pages/Part1.html
@@ -33,22 +33,22 @@
 		</h3>
 
 		<dl>
-			<dt div="term">Database</dt>
-			<dd div="defintion">
+			<dt>Database</dt>
+			<dd>
 				An organized collection of logically related data. 
 			</dd>
-			<dt div="term">Data</dt>
-			<dd div="definition">
+			<dt>Data</dt>
+			<dd>
 				Stored representation of objects and events that have meaning and importance 
 				in the user's environment.
 			</dd>
-			<dt div="term">Information</dt>
-			<dd div="definition">
+			<dt>Information</dt>
+			<dd>
 				Data that have been processed in such a way as to increase the knowledge of 
 				the person who uses the data.
 			</dd>
-			<dt div="term">Metadata</dt>
-			<dd div="definition">
+			<dt>Metadata</dt>
+			<dd>
 				Data that describes the properties or characteristics of end-user data and
 				the context of those data.
 			</dd>
@@ -66,27 +66,27 @@
 		</p>
 
 		<dl>
-			<dt div="term">Database applicaton</dt>
-			<dd div="definition">
+			<dt>Database applicaton</dt>
+			<dd>
 				An application program (or set of related programs) that is used to perform a series
 				of database activities (create, read, update and delete) on behalf of database users.
 			</dd>
-			<dt div="term">Data model</dt>
-			<dd div="definition">
+			<dt>Data model</dt>
+			<dd>
 				Graphical systems used to capture the nature and relationships among data.
 			</dd>
-			<dt div="term">Entity</dt>
-			<dd div="definition">
+			<dt>Entity</dt>
+			<dd>
 				A person, a place, an object, an event, or a concept in the user environment about
 				which the organization wishes to maintain data.
 			</dd>
-			<dt div="term">Relational database</dt>
-			<dd div="definition">
+			<dt>Relational database</dt>
+			<dd>
 				A database that represents data as a collection of tables in which all data relationships
 				are represented by common values in related tables.
 			</dd>
-			<dt div="term">Database management system (DBMS)</dt>
-			<dd div="definition">
+			<dt>Database management system (DBMS)</dt>
+			<dd>
 				A software system that is used to create, maintain, and provide controlled access to 
 				user databases.
 			</dd>
@@ -109,17 +109,17 @@
 		</p>
 
 		<dl>
-			<dt div="term">Data independence</dt>
-			<dd div="definition">
+			<dt>Data independence</dt>
+			<dd>
 				The separation of data descriptions from the application programs that use the data.
 			</dd>
-			<dt div="term">User view</dt>
-			<dd div="definition">
+			<dt>User view</dt>
+			<dd>
 				A logical description of some portion of teh database that is required by a user to
 				perform some task.
 			</dd>
-			<dt div="term">Constraint</dt>
-			<dd div="definition">
+			<dt>Constraint</dt>
+			<dd>
 				A rule that cannot be violated by database users.
 			</dd>
 		</dl>
@@ -151,34 +151,32 @@
 		</p>
 
 		<dl>
-			<dt div="term">Computer-aided software engineering (CASE) tools</dt>
-			<dd div="definition">
+			<dt>Computer-aided software engineering (CASE) tools</dt>
+			<dd>
 				Software tools that provide automated support for some portion of the 
 				systems development process.
 			</dd>
-			<dt div="term">Repository</dt>
-			<dd div="definition">
+			<dt>Repository</dt>
+			<dd>
 				A centralized knowledge base of all data definitions, data relationships,
 				screen and report formats, and other system conponents.
 			</dd>
-			<dt div="term">Enterprise resource planning (ERP)</dt>
-			<dd div="definition">
+			<dt>Enterprise resource planning (ERP)</dt>
+			<dd>
 				A business management system that integrates all functions of the enterprise,
 				such as manufacturing, sales, finance, marketing, inventory, accounting, and
 				human resources. ERP systems are software applications that provide the data
 				necessary for the enterprise to examine and manage its activities.
 			</dd>
-			<dt div="term">Data warehouse</dt>
-			<dd div="definition">
+			<dt>Data warehouse</dt>
+			<dd>
 				An integrated decision support database whose content is derived from the various
 				operational databases.
 			</dd>
-			<dt div="term"></dt>
-			<dd div="definition"></dd>
 		</dl>
 	</p>
 
-	<table>
+	<table class="center">
 		<tr>
 			<th>Types of Database / Application</th>
 			<th>Typical Number of Users</th>
@@ -211,7 +209,32 @@
 		</tr>
 	</table>
 
-	
+	<dl>
+		<dt>Enterprise data model</dt>
+		<dd>
+			The first step in database development, in which the scope and general
+			contents of organizational databases are specified.
+		</dd>
+		<dt>Systems development life cycle (SDLC)</dt>
+		<dd>
+			The traditional methodology used to develop, maintain, and replace
+			information systems.
+		</dd>
+		<dt>Conceptual schema</dt>
+		<dd>
+			A detailed, technologyindependent specification of the overall structure
+			of organizational data.
+		</dd>
+		<dt>Logical schema</dt>
+		<dd>
+			The representation of a database for a particular data management technology.
+		</dd>
+		<dt>Physical schema</dt>
+		<dd>
+			Specification for how data from a logical schema are stored in a computer's
+			secondary memory by a database management system.
+		</dd>
+	</dl>
 
 	<footer><a href="../pages/Citations.html">Citations</a></footer>
 
