Add content to Part1.html

--- a/pages/Part1.html
+++ b/pages/Part1.html
@@ -234,7 +234,52 @@
 			Specification for how data from a logical schema are stored in a computer's
 			secondary memory by a database management system.
 		</dd>
+		<dt>Prototyping</dt>
+		<dd>
+			An iterative process of systems development in which requirements are converted
+			to a working system that is continually revised through close work between analysts
+			and users.
+		</dd>
+		<dt>Agile software development</dt>
+		<dd>
+			An approach to database and software development that emphasizes "<em>individuals
+			and interactions</em> over processes and tools, <em>working software</em> over
+			comprehensive documentation, <em>customer collaboration</em> over contract negotiation,
+			and <em>response to change</em> over following a plan."
+		</dd>
 	</dl>
+
+	<p>
+		<h4>The three schemas as defined by ANSI</h4>
+		<ol>
+			<li>External schema</li>
+			<li>Conceptual schema</li>
+			<li>Internal schema</li>
+		</ol>
+	</p>
+
+	<dl>
+		<dt>Project</dt>
+		<dd>
+			A planned undertaking of related activities to reach an objective that has a beginning
+			and an end.
+		</dd>
+	</dl>
+
+	<p>
+		<h4>Systems and Database Development teams can include:</h4>
+		<ul>
+			<li>Business analysts</li>
+			<li>Systems analysts</li>
+			<li>Database analysts and data modelers</li>
+			<li>Users</li>
+			<li>Programmers</li>
+			<li>Database architects</li>
+			<li>Data administrators</li>
+			<li>Project managers</li>
+			<li>Other technical experts</li> 
+		</ul>
+	</p>
 
 	<footer><a href="../pages/Citations.html">Citations</a></footer>
 
