Add an image, Part2.html. Add content and minor changes to style.css

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
 	
 
-	<ul>
-		<h2 div="Part">
-			<a href="pages/Part1.html">Part 1 Context of Database Management</a>
-		</h2>
-	</ul>
+	<ol>
+		<li><h2>
+			<a href="pages/Part1.html">Database Environment and Development Process</a>
+		</h2></li>
+		<li><h2>
+			<a href="pages/Part2.html">Modeling data in the Organization</a>
+		</h2></li>
+	</ol>
 
 	<footer><a href="pages/Citations.html">Citations</a></footer>
 </body>
