--- a/pages/Citations.html
+++ b/pages/Citations.html
@@ -26,6 +26,12 @@
             “Database.” Wikipedia, Wikimedia Foundation, 3 Apr. 2022, 
             <a href = https://en.wikipedia.org/wiki/Database>https://en.wikipedia.org/wiki/Database.</a> 
         </li>
+        <li>
+            Gaudreault, Daniel. "CST8215 - S17 - Week 2", <i>YouTube</i>, uploaded by Daniel Gaudreault,
+            accessed April 6, 2022, https://youtu.be/bWOf7NE0m0g
+        </li>
     </ul>
+
+    
 
 </body>
