--- a/pages/Part1.html
+++ b/pages/Part1.html
@@ -25,156 +25,159 @@
 	title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 	encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+
+	<h3>
+		Definitions and Notes
+		<cite>(Hoffer)</cite>
+	</h3>
+
+	<dl>
+		<dt>Database</dt>
+		<dd>
+			An organized collection of logically related data. 
+		</dd>
+		<dt>Data</dt>
+		<dd>
+			Stored representation of objects and events that have meaning and importance 
+			in the user's environment.
+		</dd>
+		<dt>Information</dt>
+		<dd>
+			Data that have been processed in such a way as to increase the knowledge of 
+			the person who uses the data.
+		</dd>
+		<dt>Metadata</dt>
+		<dd>
+			Data that describes the properties or characteristics of end-user data and
+			the context of those data.
+		</dd>
+	</dl>
+
 	<p>
-		<h3>
-			Definitions and Notes
-			<cite>(Hoffer)</cite>
-
-		</h3>
-
-		<dl>
-			<dt>Database</dt>
-			<dd>
-				An organized collection of logically related data. 
-			</dd>
-			<dt>Data</dt>
-			<dd>
-				Stored representation of objects and events that have meaning and importance 
-				in the user's environment.
-			</dd>
-			<dt>Information</dt>
-			<dd>
-				Data that have been processed in such a way as to increase the knowledge of 
-				the person who uses the data.
-			</dd>
-			<dt>Metadata</dt>
-			<dd>
-				Data that describes the properties or characteristics of end-user data and
-				the context of those data.
-			</dd>
-		</dl>
-
-		<p>
-			<h4>Disadvantages of traditional file processing systems</h4>
-			<ul>
-				<li>Program-data dependence</li>
-				<li>Duplication of data</li>
-				<li>Limited data sharing</li>
-				<li>Lengthy development times</li>
-				<li>Excessive program maintenance</li>
-			</ul>
-		</p>
-
-		<dl>
-			<dt>Database applicaton</dt>
-			<dd>
-				An application program (or set of related programs) that is used to perform a series
-				of database activities (create, read, update and delete) on behalf of database users.
-			</dd>
-			<dt>Data model</dt>
-			<dd>
-				Graphical systems used to capture the nature and relationships among data.
-			</dd>
-			<dt>Entity</dt>
-			<dd>
-				A person, a place, an object, an event, or a concept in the user environment about
-				which the organization wishes to maintain data.
-			</dd>
-			<dt>Relational database</dt>
-			<dd>
-				A database that represents data as a collection of tables in which all data relationships
-				are represented by common values in related tables.
-			</dd>
-			<dt>Database management system (DBMS)</dt>
-			<dd>
-				A software system that is used to create, maintain, and provide controlled access to 
-				user databases.
-			</dd>
-		</dl>
-
-		<p>
-			<h4>Advantages of the Database Approach</h4>
-			<ul>
-				<li>Program-data independence</li>
-				<li>Planned data redundancy</li>
-				<li>Improved data consistency</li>
-				<li>Improved data sharing</li>
-				<li>Increased productivity of application development</li>
-				<li>Enforcement of standards</li>
-				<li>Improved data quality</li>
-				<li>Improved data accessibility and responsiveness</li>
-				<li>Reduced program maintenance</li>
-				<li>Improved dexision support</li>
-			</ul>
-		</p>
-
-		<dl>
-			<dt>Data independence</dt>
-			<dd>
-				The separation of data descriptions from the application programs that use the data.
-			</dd>
-			<dt>User view</dt>
-			<dd>
-				A logical description of some portion of teh database that is required by a user to
-				perform some task.
-			</dd>
-			<dt>Constraint</dt>
-			<dd>
-				A rule that cannot be violated by database users.
-			</dd>
-		</dl>
-
-		<p>
-			<h4>Costs and Risks of the Database Approach</h4>
-			<ul>
-				<li>New, specialized personnel</li>
-				<li>Installation and management costs and complexity</li>
-				<li>Conversion costs</li>
-				<li>Need for explicit backup and recovery</li>
-				<li>Organizational conflict</li>
-			</ul>
-		</p>
-
-		<p>
-			<h4>Components of the Database Environment</h4>
-			<ol>
-				<li>Computer-aided software engineering (CASE) tools</li>
-				<li>Repository</li>
-				<li>DBMS</li>
-				<li>Database</li>
-				<li>Application programs</li>
-				<li>User interface</li>
-				<li>Data and database administrators</li>
-				<li>System developers</li>
-				<li>End Users</li>
-			</ol>
-		</p>
-
-		<dl>
-			<dt>Computer-aided software engineering (CASE) tools</dt>
-			<dd>
-				Software tools that provide automated support for some portion of the 
-				systems development process.
-			</dd>
-			<dt>Repository</dt>
-			<dd>
-				A centralized knowledge base of all data definitions, data relationships,
-				screen and report formats, and other system conponents.
-			</dd>
-			<dt>Enterprise resource planning (ERP)</dt>
-			<dd>
-				A business management system that integrates all functions of the enterprise,
-				such as manufacturing, sales, finance, marketing, inventory, accounting, and
-				human resources. ERP systems are software applications that provide the data
-				necessary for the enterprise to examine and manage its activities.
-			</dd>
-			<dt>Data warehouse</dt>
-			<dd>
-				An integrated decision support database whose content is derived from the various
-				operational databases.
-			</dd>
-		</dl>
+		<h4>Disadvantages of traditional file processing systems</h4>
+		<ul>
+			<li>Program-data dependence</li>
+			<li>Duplication of data</li>
+			<li>Limited data sharing</li>
+			<li>Lengthy development times</li>
+			<li>Excessive program maintenance</li>
+		</ul>
 	</p>
+
+	<dl>
+		<dt>Database applicaton</dt>
+		<dd>
+			An application program (or set of related programs) that is used to perform a series
+			of database activities (create, read, update and delete) on behalf of database users.
+		</dd>
+	</dl>
+
+	<h2>Unit 1 Section 2: Database Management Systems</h2>
+
+	<dl>
+		<dt>Data model</dt>
+		<dd>
+			Graphical systems used to capture the nature and relationships among data.
+		</dd>
+		<dt>Entity</dt>
+		<dd>
+			A person, a place, an object, an event, or a concept in the user environment about
+			which the organization wishes to maintain data.
+		</dd>
+		<dt>Relational database</dt>
+		<dd>
+			A database that represents data as a collection of tables in which all data relationships
+			are represented by common values in related tables.
+		</dd>
+		<dt>Database management system (DBMS)</dt>
+		<dd>
+			A software system that is used to create, maintain, and provide controlled access to 
+			user databases.
+		</dd>
+	</dl>
+
+	<p>
+		<h4>Advantages of the Database Approach</h4>
+		<ul>
+			<li>Program-data independence</li>
+			<li>Planned data redundancy</li>
+			<li>Improved data consistency</li>
+			<li>Improved data sharing</li>
+			<li>Increased productivity of application development</li>
+			<li>Enforcement of standards</li>
+			<li>Improved data quality</li>
+			<li>Improved data accessibility and responsiveness</li>
+			<li>Reduced program maintenance</li>
+			<li>Improved dexision support</li>
+		</ul>
+	</p>
+
+	<dl>
+		<dt>Data independence</dt>
+		<dd>
+			The separation of data descriptions from the application programs that use the data.
+		</dd>
+		<dt>User view</dt>
+		<dd>
+			A logical description of some portion of teh database that is required by a user to
+			perform some task.
+		</dd>
+		<dt>Constraint</dt>
+		<dd>
+			A rule that cannot be violated by database users.
+		</dd>
+	</dl>
+
+	<p>
+		<h4>Costs and Risks of the Database Approach</h4>
+		<ul>
+			<li>New, specialized personnel</li>
+			<li>Installation and management costs and complexity</li>
+			<li>Conversion costs</li>
+			<li>Need for explicit backup and recovery</li>
+			<li>Organizational conflict</li>
+		</ul>
+	</p>
+
+	<p>
+		<h4>Components of the Database Environment</h4>
+		<ol>
+			<li>Computer-aided software engineering (CASE) tools</li>
+			<li>Repository</li>
+			<li>DBMS</li>
+			<li>Database</li>
+			<li>Application programs</li>
+			<li>User interface</li>
+			<li>Data and database administrators</li>
+			<li>System developers</li>
+			<li>End Users</li>
+		</ol>
+	</p>
+
+	<dl>
+		<dt>Computer-aided software engineering (CASE) tools</dt>
+		<dd>
+			Software tools that provide automated support for some portion of the 
+			systems development process.
+		</dd>
+		<dt>Repository</dt>
+		<dd>
+			A centralized knowledge base of all data definitions, data relationships,
+			screen and report formats, and other system conponents.
+		</dd>
+		<dt>Enterprise resource planning (ERP)</dt>
+		<dd>
+			A business management system that integrates all functions of the enterprise,
+			such as manufacturing, sales, finance, marketing, inventory, accounting, and
+			human resources. ERP systems are software applications that provide the data
+			necessary for the enterprise to examine and manage its activities.
+		</dd>
+		<dt>Data warehouse</dt>
+		<dd>
+			An integrated decision support database whose content is derived from the various
+			operational databases.
+		</dd>
+	</dl>
 
 	<table class="center">
 		<tr>
@@ -209,8 +212,10 @@
 		</tr>
 	</table>
 
+	<h2>Unit 1 Section 3: Database Development Life Cycle</h2>
+
 	<dl>
-		<dt>Enterprise data model</dt>
+		<dt>Enterprise data modeling</dt>
 		<dd>
 			The first step in database development, in which the scope and general
 			contents of organizational databases are specified.
