Update Part2.html content.

--- a/pages/Part2.html
+++ b/pages/Part2.html
@@ -123,6 +123,138 @@
         </tr>
     </table>
 
+    <dl>
+        <dt>Term</dt>
+        <dd>
+            A word or phrase that has a specific meaning for the business.
+        </dd>
+        <dt>Fact</dt>
+        <dd>
+            An association between two or more terms.
+        </dd>
+        <dt>Entity</dt>
+        <dd>
+            A person, a place, an object, an event, or a concept in the user environment about which
+            the organization wishes to maintain data.
+        </dd>
+        <dt>Entity type</dt>
+        <dd>
+            A collection of entities that share common properties or characteristics.
+        </dd>
+        <dt>Entity Instance</dt>
+        <dd>
+            A single occurence of an entity type.
+        </dd>
+        <dt>Strong entity type</dt>
+        <dd>
+            An entity that exists independently of other entity types.
+        </dd>
+        <dt>Weak entity type</dt>
+        <dd>
+            An entity type whose existence depends on some other entity type.
+        </dd>
+        <dt>Indentifying owner</dt>
+        <dd>
+            The entity type on which th weak entity type depends.
+        </dd>
+        <dt>Identifying relationship</dt>
+        <dd>
+            The relationship between a weak entity type and its owner.
+        </dd>
+        <dt>Attribute</dt>
+        <dd>
+            A property or characteristic of an entity or relationship type that is of interest
+            to the organization.
+        </dd>
+        <dt>Attribute</dt>
+        <dd>
+            A property or characteristic of an entity or relationship type that is of interest
+            to the organization.
+        </dd>
+        <dt>Required attribute</dt>
+        <dd>
+            An attribute that must have a value for every entity (or relationship) instance with
+            which it is associated.
+        </dd>
+        <dt>Optional attribute</dt>
+        <dd>
+            An attribute that may not have a value for every entity (or relationship) instance
+            with which it is associated.
+        </dd>
+        <dt>Composite attribute</dt>
+        <dd>
+            An attribute that has meaningful component parts (attributes).
+        </dd>
+        <dt>Simple (or atomic) attribute</dt>
+        <dd>
+            An attribute that cannot be broken down into smaller components that are meaningful
+            to the organization.
+        </dd>
+        <dt>Multivalued attribute</dt>
+        <dd>
+            An attribute that may take on more than one value for a given entity (or relationship)
+            instance.
+        </dd>
+        <dt>Derived attribute</dt>
+        <dd>
+            An attribute whose values can be calculated from related attribute values.
+        </dd>
+        <dt>Identifier</dt>
+        <dd>
+            An attribute (or combination of attributes) whose value distinguishes instance of an
+            entity type.
+        </dd>
+        <dt>Composite Identifier</dt>
+        <dd>
+            An identifier that consists of a composite attribute.
+        </dd>
+        <dt>Relationship type</dt>
+        <dd>
+            A meaningful assoiation between (or among) entity types.
+        </dd>
+        <dt>Relationship instance</dt>
+        <dd>
+            An association between (or among) entity instances where each relationship instance
+            associates exactly one entity instance from each participating entity type.
+        </dd>
+        <dt>Associative entity</dt>
+        <dd>
+            An entity type that associates the instances of one or more entity types and contains
+            attributes that are peculiar to the relationship beteen those entity instances.
+        </dd>
+        <dt>Degree</dt>
+        <dd>The number of entity types that particpate in a relationship.</dd>
+        <dt>Unary relationship</dt>
+        <dd>
+            A relationship between instances of a single entity type.
+        </dd>
+        <dt>Binary relationship</dt>
+        <dd>
+            A relationship between the instances of two entity types.
+        </dd>
+        <dt>Ternary relationship</dt>
+        <dd>
+            Asimultaneous relationship among the instances of three entity types.
+        </dd>
+        <dt>Cardinality constraint</dt>
+        <dd>
+            A rule that specifies the number of instances of one entity that can (or must)
+            be associated with each instance of another entity.
+        </dd>
+        <dt>Minimum candinality</dt>
+        <dd>
+            The minimum number of instances of one entity that may be associated with each
+            instance of another entity.
+        </dd>
+        <dt>Maximum cardinality</dt>
+        <dd>
+            The maximum number of instances of one entity that may be associated with each
+            instance of another entity.
+        </dd>
+        
+    </dl>
+
+
     <footer><a href="../pages/Citations.html">Citations</a></footer>
 
 </body>
