--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 		<li><h2>
 			<a href="pages/Part2.html">Modeling data in the Organization</a>
 		</h2></li>
+		<li><h2>
+			<a href="pages/Part3.html">The Relational Model and Normalization</a>
+		</h2></li>
 	</ol>
 
 	<footer><a href="pages/Citations.html">Citations</a></footer>
